--- a/classes/Class 2 Notebook.ipynb
+++ b/classes/Class 2 Notebook.ipynb
@@ -4364,7 +4364,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6067b19e",
+   "id": "8be5f1c9",
    "metadata": {},
    "outputs": [
     {
@@ -4639,7 +4639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 62,
    "id": "9ab6670e",
    "metadata": {},
    "outputs": [
@@ -4685,44 +4685,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "0af05c91",
+   "execution_count": 64,
+   "id": "77f52f46",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2454602151.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [44]\u001b[0;36m\u001b[0m\n\u001b[0;31m    def get_legal(urldict)\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\n\\nDevelopment Site Parcel:DV0001932Legal Description:PAR A, LBA #8806752, THT POR BLK 13, KINNEARS 1ST RAINIER BEACH ADD, AND POR TRC A, BLK 2, GUTHERIES TERRACE PARK, AND POR SE 1/4 (FILE)\\n\\n'"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "## starting from here, need update work!!!!!\n",
-    "def get_legal(urldict)\n",
+    "def get_legal(urldict):\n",
     "    permiturl = urldict['url']\n",
-    "    print(permiturl)\n",
+    "    \n",
     "\n",
     "# request that page and get the soup object\n",
     "    r = requests.get(permiturl)\n",
     "    soup = BeautifulSoup(r.text)\n",
-    "    print(soup.prettify())\n",
     "    links = soup.find_all('tr')\n",
     "    for link in links:\n",
-    "    if 'Legal Description' in link.text: \n",
-    "        sublinks = link.find_all('td')\n",
-    "        description = sublinks[5].text\n",
+    "        if 'Legal Description' in link.text: \n",
+    "            sublinks = link.find_all('td')\n",
+    "            description = sublinks[5].text\n",
     "        # once we find a description, we exit\n",
-    "        return description\n",
+    "            return description\n",
     "    \n",
-    "get_legal(df.loc[0,'link'])"
+    "urldict=df.loc[0,'link']\n",
+    "get_legal(urldict)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "ea774d50",
+   "id": "a0bbd0d5",
    "metadata": {},
    "outputs": [
     {
@@ -4962,7 +4964,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "b4f46209",
+   "id": "90e9162c",
    "metadata": {},
    "outputs": [
     {
@@ -5045,7 +5047,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "866c0369",
+   "id": "67998f8b",
    "metadata": {},
    "outputs": [
     {
@@ -5116,7 +5118,7 @@
    "source": [
     "# Convert the number of housing units to integers\n",
     "# and then summarize\n",
-    "\n",
+    "## only float can hold NaN\n",
     "df['unitsadded_numeric'] = df.housingunitsadded.astype(float)\n",
     "df.unitsadded_numeric.describe()"
    ]
